--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
         </thead>
         <tbody id="tableBody"></tbody>
     </table>
+
+    <div style="margin-top: 40px; border-top: 1px solid #eee; padding-top: 20px; text-align: center; font-size: 11px; color: #999;">
+        晴れる屋ポイント履歴集計ツール is unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.
+    </div>
 </div>
 
 <div id="monthlyModal" class="modal-overlay" onclick="closeModalOnOverlay(event, 'monthlyModal')">
