--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>晴れる屋ポイント履歴集計ツール</title>
+    <title>ポイント履歴集計ツール</title>
     <style>
         body { font-family: "Helvetica Neue", Arial, sans-serif; background-color: #f4f4f9; color: #333; margin: 0; padding: 20px; }
         .container { max-width: 1000px; margin: 0 auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -95,7 +95,7 @@
 <body>
 
 <div class="container">
-    <h1>晴れる屋 ポイント履歴集計</h1>
+    <h1>ポイント履歴集計</h1>
 
     <div class="input-section">
         <p>データの取り込み</p>
@@ -162,7 +162,7 @@
     </table>
 
     <div style="margin-top: 40px; border-top: 1px solid #eee; padding-top: 20px; text-align: center; font-size: 11px; color: #999;">
-        晴れる屋ポイント履歴集計ツール is unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.
+        ポイント履歴集計ツール is unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.
     </div>
 </div>
 
@@ -477,3 +477,4 @@
 
 </body>
 </html>
+
